Add support for java 11, add test cases